Primary bughunt (#41)
Co-authored-by: Morten Haraldsen <dev@ethlo.com>
Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>